--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux, x64, gpu]
+    runs-on: [self-hosted]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
@@ -23,4 +23,4 @@ jobs:
       - name: Copy to S3    
         run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       - name: Invalidating CloudFront Cache
-        run: aws cloudfront create-invalidation --distribution-id E1ITG6XIWHPJBO --paths "/*"
+        run: aws cloudfront create-invalidation --distribution-id E2N9QTCYXOBN35 --paths "/*"
