--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,10 +6,10 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, linux]
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
       - name: Install dependencies
         run: npm install
       - name: Build Website
