--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - run: which bash
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install dependencies
+        shell: bash
+        run: npm install
       # - name: Build Website
       #   run: npm run build
       # - name: Set AWS credentials
