--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -9,11 +9,13 @@ jobs:
     runs-on: [self-hosted, linux, x64]
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Install dependencies
-        run: npm install
+        uses: bahmutov/npm-install@v1
       # - name: Build Website
       #   run: npm run build
       # - name: Set AWS credentials
