--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,15 +16,15 @@ jobs:
           node-version: 16
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
-      # - name: Build Website
-      #   run: npm run build
-      # - name: Set AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: us-east-1
-      # - name: Copy to S3    
-      #   run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
+      - name: Build Website
+        run: npm run build
+      - name: Set AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Copy to S3    
+        run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       # - name: Invalidating CloudFront Cache
       #   run: aws cloudfront create-invalidation --distribution-id E2N9QTCYXOBN35 --paths "/*"
