--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, linux, x64]
+    strategy:
+      matrix:
+        include:
+          - TEST_NAME: "Latest v2"
+            AWS_CLI_VERSION: "2"
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -25,6 +30,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - uses: unfor19/install-aws-cli-action@v1.0.3
+        with:
+          version: ${{ matrix.AWS_CLI_VERSION }}
+      - run: aws --version
+        shell: bash
       - name: Copy to S3    
         run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       # - name: Invalidating CloudFront Cache
