--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,16 +7,16 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, linux, x64]
-    strategy:
-      matrix:
-        include:
-          - TEST_NAME: "Latest v2"
-            AWS_CLI_VERSION: "2"
+    # strategy:
+    #   matrix:
+    #     include:
+    #       - TEST_NAME: "Latest v2"
+    #         AWS_CLI_VERSION: "2"
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Install Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
           node-version: 16
       - name: Install dependencies
@@ -29,12 +29,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - uses: unfor19/install-aws-cli-action@v1.0.3
-        with:
-          version: ${{ matrix.AWS_CLI_VERSION }}
-      - run: aws --version
-        shell: bash
-      - name: Copy to S3    
-        run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
+      - uses: actions/aws/cli@master
+      #   with:
+      #     version: ${{ matrix.AWS_CLI_VERSION }}
+      # - run: aws --version
+      #   shell: bash
+      # - name: Copy to S3    
+        run: aws --version |
+          aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       # - name: Invalidating CloudFront Cache
       #   run: aws cloudfront create-invalidation --distribution-id E2N9QTCYXOBN35 --paths "/*"
