--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,7 +34,7 @@ jobs:
       #     version: ${{ matrix.AWS_CLI_VERSION }}
       # - run: aws --version
       #   shell: bash
-      # - name: Copy to S3    
+      - name: Copy to S3    
         run: aws --version |
           aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       # - name: Invalidating CloudFront Cache
