--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,11 +7,6 @@ on:
 jobs:
   build:
     runs-on: [self-hosted, linux, x64]
-    # strategy:
-    #   matrix:
-    #     include:
-    #       - TEST_NAME: "Latest v2"
-    #         AWS_CLI_VERSION: "2"
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -29,13 +24,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - uses: actions/aws/cli@master
-      #   with:
-      #     version: ${{ matrix.AWS_CLI_VERSION }}
-      # - run: aws --version
-      #   shell: bash
-      - name: Copy to S3    
-        run: aws --version |
-          aws s3 sync ./build/. s3://www.elasticsi-project-bucket
-      # - name: Invalidating CloudFront Cache
-      #   run: aws cloudfront create-invalidation --distribution-id E2N9QTCYXOBN35 --paths "/*"
+      - uses: ItsKarma/aws-cli@v1.70.0
+        with: 
+          args: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
+      # - name: Copy to S3    
+      #   run: aws --version |
+      - name: Invalidating CloudFront Cache
+        run: aws cloudfront create-invalidation --distribution-id E2ZEAE6OM42MO5 --paths "/*"
