--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,8 +24,15 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - name: Install aws cli
-        uses: isbang/setup-awscli@v0.1.0
+      - name: Install python
+        # uses: isbang/setup-awscli@v0.1.0
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install awscli
       - run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       - name: Invalidating CloudFront Cache
         run: aws cloudfront create-invalidation --distribution-id E2ZEAE6OM42MO5 --paths "/*"
