--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -19,9 +19,11 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
-    - name: Login to Amazon ECR
-      id: login-ecr
+    - name: Login to Amazon ECR Private
+      id: login-ecr-private
       uses: aws-actions/amazon-ecr-login@v1
+      with:
+        registry-type: private
     - name: Automatic Tagging of Releases
       id: increment-git-tag
       run: |
