--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: "Deploy Website to S3 using GitHub Actions"
+name: "Deploy Website to CloudFront using S3 as origin using GitHub Actions"
 
 on:
   push:
@@ -25,7 +25,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Install python
-        # uses: isbang/setup-awscli@v0.1.0
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
@@ -33,6 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install awscli
-      - run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
+      - name: Copy the build folder to S3 bucket
+        run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       - name: Invalidating CloudFront Cache
         run: aws cloudfront create-invalidation --distribution-id E2ZEAE6OM42MO5 --paths "/*"
