--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -20,18 +20,14 @@ jobs:
         aws-region: us-east-1
     - name: Login to Amazon ECR
       id: login-ecr
-      uses: thalesvon/ecr-login@master
+      uses: aws-actions/amazon-ecr-login@v1
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
         AWS_DEFAULT_OUTPUT: json
         AWS_REGION: us-east-1
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       with:
-        args: 'get-login --no-include-email --region us-east-1'
-    - name: 'Docker Login'
-      run: ${{ steps. ecr-login.outputs.login-string }}
-      #uses: aws-actions/amazon-ecr-login@v1
-
+        args: 'get-login --no-include-email --region ${AWS_REGION}'
     - name: Build, tag, and push docker image to Amazon ECR
       env:
         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
