--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -18,16 +18,17 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+    - name: Install python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.7'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install awscli
     - name: Login to Amazon ECR
       id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-        AWS_DEFAULT_OUTPUT: json
-        AWS_REGION: us-east-1
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      with:
-        args: 'get-login --no-include-email --region ${AWS_REGION}'
+      run: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 930667326583.dkr.ecr.us-east-1.amazonaws.com
     - name: Build, tag, and push docker image to Amazon ECR
       env:
         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
