--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     name: Build image
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux, x64]
 
     steps:
     - name: Check out code
