--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -18,6 +18,12 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
+    - name: Extract all keywords from package.json
+      uses: sergeysova/jq-action@v2
+      id: keywords
+      with:
+        cmd: 'jq .keywords[] package.json -r'
+        multiline: true
     - name: Install python
       uses: actions/setup-python@v2
       with:
