--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install awscli
+    - uses: docker/setup-qemu-action@v2
     - name: Login to ECR
       id: ecr
       uses: jwalton/gh-ecr-login@v1
