--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,38 +1,66 @@
 name: "Deploy Website to CloudFront using S3 as origin using GitHub Actions"
-
 on:
   push:
     branches: ["master", "develop"]
 
 jobs:
-  build:
-    runs-on: [self-hosted, linux, x64]
+  start-runner:
+    name: Start self-hosted EC2 runner
+    runs-on: ubuntu-latest
+    outputs:
+      label: ${{ steps.start-ec2-runner.outputs.label }}
+      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
     steps:
-      - name: Check out repository
+      - name: checkout
         uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-      - name: Build Website
-        run: npm run build
-      - name: Set AWS credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - name: Install python
-        uses: actions/setup-python@v2
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: machulav/ec2-github-runner@v2
         with:
-          python-version: '3.7'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install awscli
+          mode: start
+          github-token: ${{ secrets.TOKEN }}
+          ec2-image-id: ami-026b57f3c383c2eec
+          ec2-instance-type: t2.micro
+          subnet-id: subnet-071f86be2c5a1fd9c
+          security-group-id: sg-0d9a1e318694d2444
+  
+  do-the-job:
+    name: Do the job on the runner
+    needs: start-runner # required to start the main job when the runner is ready
+    runs-on: ${{ needs.start-runner.outputs.label }} 
+    steps:
+      - name: Install NPM Packages
+        run: npm run build
+      - name: Build Website
+        run: npm run build 
       - name: Copy the build folder to S3 bucket
         run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       - name: Invalidating CloudFront Cache
         run: aws cloudfront create-invalidation --distribution-id E2OUY338AD11Y3 --paths "/*"
+  stop-runner:
+    name: Stop self-hosted EC2 runner
+    needs:
+      - start-runner # required to get output from the start-runner job
+      - do-the-job # required to wait when the main job is done
+    runs-on: ubuntu-latest
+    if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Stop EC2 runner
+        uses: machulav/ec2-github-runner@v2
+        with:
+          mode: stop
+          github-token: ${{ secrets.TOKEN }}
+          label: ${{ needs.start-runner.outputs.label }}
+          ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
