--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -45,6 +45,12 @@ jobs:
         run: npm install
       - name: Build Website
         run: npm run build 
+      - name: Set AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       - name: Copy the build folder to S3 bucket
         run: aws s3 sync ./build/. s3://www.elasticsi-project-bucket
       - name: Invalidating CloudFront Cache
