--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -37,6 +37,11 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN }}
       - name: Set AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
