--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -43,6 +43,12 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@v4
+        with:
+          name: myDocker/repository
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
@@ -50,7 +56,7 @@ jobs:
         # access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
         # secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         # region: us-east-1
-      - run: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 930667326583.dkr.ecr.us-east-1.amazonaws.com
+        #- run: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 930667326583.dkr.ecr.us-east-1.amazonaws.com
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
