--- a/.github/workflows/imagedeploy.yml
+++ b/.github/workflows/imagedeploy.yml
@@ -49,7 +49,7 @@ jobs:
       - run: yum install docker -y
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1i
+        uses: aws-actions/amazon-ecr-login@v1
       - run: systemctl enable docker
       - run: systemctl start docker
       - name: Build, tag, and push image to Amazon ECR
