--- a/.github/workflows/newworkflow.yaml
+++ b/.github/workflows/newworkflow.yaml
@@ -1,4 +1,4 @@
-name: "Installing AWS CLI"
+name: Installing AWS CLI
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
       - name: Install python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.7'
+          python-version: '3.8'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
